log
vi., 22 de abr. de 2022 11:20:28: 
 tests:  1|8
total_score: 0/70
98afc7c
vi., 22 de abr. de 2022 11:23:31: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
491ec18
vi., 22 de abr. de 2022 11:25:18: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:45:5: error: expected ';' before 'return'
     return this;
     ^~~~~~
treemap.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5c32576
vi., 22 de abr. de 2022 11:26:26: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
6b88fff
vi., 22 de abr. de 2022 11:27:04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
af244ce
vi., 22 de abr. de 2022 11:44:16: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|0
53c0e0d
vi., 22 de abr. de 2022 11:45:47: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
008cadd
vi., 22 de abr. de 2022 11:46:32: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e08b8b0
vi., 22 de abr. de 2022 11:47:04: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
b85a82b
vi., 22 de abr. de 2022 11:48:42: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
cc4291a
vi., 22 de abr. de 2022 11:49:08: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7e786e5
vi., 22 de abr. de 2022 11:49:33: 
 treemap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  6|7
total_score: 5/70
24e8a0d
vi., 22 de abr. de 2022 11:50:32: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
169370b
vi., 22 de abr. de 2022 11:51:33: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|0
5d7bb1b
vi., 22 de abr. de 2022 11:51:50: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|0
!!!! Tiempo de ejecucion excedido
5d7bb1b
vi., 22 de abr. de 2022 11:52:49: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|7
total_score: 5/70
19ca91b
vi., 22 de abr. de 2022 11:54:43: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:101:27: error: format '%d' expects argument of type 'int', but argument 2 has type 'void *' [-Werror=format=]
     printf("!!Found key: %d\n", i->pair->key);
                           ^
cc1.exe: all warnings being treated as errors
Compilation failed
b413910
vi., 22 de abr. de 2022 11:54:53: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:101:33: error: dereferencing 'void *' pointer [-Werror]
     printf("!!Found key: %d\n", *i->pair->key);
                                 ^~~~~~~~~~~~~
treemap.c:101:5: error: invalid use of void expression
     printf("!!Found key: %d\n", *i->pair->key);
     ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
16aeae4
vi., 22 de abr. de 2022 11:55:26: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7ba038a
vi., 22 de abr. de 2022 11:56:01: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
37e6291
vi., 22 de abr. de 2022 11:56:28: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|7
total_score: 5/70
be3c484
vi., 22 de abr. de 2022 11:57:04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|0
total_score: 5/70
ef2776e
vi., 22 de abr. de 2022 11:58:30: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
df53d12
